manifests/services/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media
  namespace: media-center
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: media
  template:
    metadata:
      labels:
        app.kubernetes.io/name: media
    spec:
      hostNetwork: true
      nodeSelector:
        kubernetes.io/hostname: shino
      runtimeClassName: nvidia
      securityContext:
        supplementalGroups:
          - 1000
        fsGroup: 1000
      volumes:
        - name: plex-config
          persistentVolumeClaim:
            claimName: plex-config
        - name: media
          persistentVolumeClaim:
            claimName: media-storage
        # Temp Dirs
        - name: transcoding
          emptyDir: {}
      containers:
        - name: plex
          image: linuxserver/plex
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /identity
              port: plex-https
              scheme: HTTPS
            initialDelaySeconds: 60
          readinessProbe:
            httpGet:
              path: /identity
              port: plex-https
              scheme: HTTPS
          ports:
            - containerPort: 32400
              name: plex-https
              hostPort: 32400
              protocol: TCP
            - containerPort: 32400
              name: plex-http-udp
              hostPort: 32400
              protocol: UDP
            - containerPort: 32469
              hostPort: 32469
              protocol: TCP
            - containerPort: 32469
              protocol: UDP
              hostPort: 32469
            - containerPort: 5353
              hostPort: 5353
              protocol: UDP
            - containerPort: 1900
              hostPort: 1900
              protocol: UDP
          volumeMounts:
            - name: plex-config
              mountPath: /config
            - name: media
              mountPath: /data/media
            - name: transcoding
              mountPath: /transcoding
          resources:
            requests:
              cpu: "2"
              memory: 3Gi
