manifests/services/plex/jellyfin-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media-center
  annotations:
    cert-manager.io/cluster-issuer: "main"
    # Recommended settings for nginx:
    # https://jellyfin.org/docs/general/networking/nginx/
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jellyfin.rgst.io
      secretName: jellyfin-rgst-io
  rules:
    - host: jellyfin.rgst.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jellyfin
                port:
                  name: http
